Fixed alignment of recipe titles underneath recipe pictures

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,8 +62,48 @@ padding: 10px;
   justify-content: space-evenly;
   padding-bottom: 152px;
 
-
-
 }
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+/* .recipe-card {
+  max-width: 350px;
+ }
+
+ .rounded {
+    height: 300px;
+    width: 200px;
+
+ }
+
+.recipe-title {
+  font-size: 25px;
+  max-width: 350px;
+} */
+
+.recipe-card {
+  /* To correctly align image, regardless of content height: */
+  vertical-align: top;
+  display: inline-block;
+  /* To horizontally center images and caption */
+  text-align: left;
+  /* The width of the container also implies margin around the images. */
+  width: 200px;
+}
+
+.rounded {
+  width: 200px;
+  height: 300px;
+  background-color: grey;
+}
+.caption {
+  /* Make the caption a block so it occupies its own line. */
+  display: block;
+}
+
+
 
 /*# sourceMappingURL=style.css.map */
